# ushma

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/development/: roadmap.md
examples/: basic_thermo.rs  building_thermal.rs  cooling_system.rs  heat_engine.rs  phase_change.rs
scripts/: bench-history.sh  version-bump.sh
src/: ai.rs  bridge.rs  chem.rs  cycle.rs  entropy.rs  error.rs  lib.rs  logging.rs  material.rs  numerical.rs  phase.rs  stat.rs  state.rs  steam.rs  transfer.rs
src/integration/: mod.rs  soorat.rs
tests/: integration.rs
