[package]
name = "ushma"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Thermodynamics simulation — heat transfer, entropy, equations of state, thermal properties"
homepage = "https://github.com/MacCracken/ushma"
repository = "https://github.com/MacCracken/ushma"
readme = "README.md"
documentation = "https://docs.rs/ushma"
keywords = ["thermodynamics", "physics", "heat-transfer", "simulation", "entropy"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["transfer", "state", "entropy", "material"]
transfer = []
state = []
entropy = []
material = []
ai = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
logging = ["dep:tracing-subscriber"]
full = ["transfer", "state", "entropy", "material", "ai", "logging"]

[dependencies]
hisab = "0.22.4"
impetus = "0.23.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optional
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["transfer", "state", "entropy", "material"]

[[test]]
name = "integration"
required-features = ["transfer", "state", "entropy", "material"]

[[example]]
name = "basic_thermo"
required-features = ["transfer", "state", "material"]
