[package]
name = "ushma"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Thermodynamics simulation — heat transfer, entropy, equations of state, thermal properties"
homepage = "https://github.com/MacCracken/ushma"
repository = "https://github.com/MacCracken/ushma"
readme = "README.md"
documentation = "https://docs.rs/ushma"
keywords = ["thermodynamics", "physics", "heat-transfer", "simulation", "entropy"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["transfer", "state", "entropy", "material", "phase", "cycle", "numerical", "chem", "stat"]
transfer = []
state = []
entropy = ["state"]
phase = ["state"]
steam = ["phase"]
cycle = ["state", "entropy"]
numerical = ["transfer"]
chem = ["state", "entropy"]
stat = ["state", "transfer"]
material = []
ai = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
logging = ["dep:tracing-subscriber"]
full = ["transfer", "state", "entropy", "material", "phase", "steam", "cycle", "numerical", "chem", "stat", "ai", "logging"]

[dependencies]
hisab = "1"
impetus = "0.23.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optional
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["transfer", "state", "entropy", "material", "phase", "steam", "cycle", "numerical", "chem", "stat"]

[[test]]
name = "integration"
required-features = ["transfer", "state", "entropy", "material", "phase", "steam", "cycle", "numerical", "chem", "stat"]

[[example]]
name = "basic_thermo"
required-features = ["transfer", "state", "material"]

[[example]]
name = "heat_engine"
required-features = ["cycle", "state", "entropy"]

[[example]]
name = "building_thermal"
required-features = ["transfer", "material", "numerical"]

[[example]]
name = "cooling_system"
required-features = ["transfer", "material"]

[[example]]
name = "phase_change"
required-features = ["phase", "transfer"]
